--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <section>
@@ -14,13 +16,42 @@
             <input type="time" class="time-input">
             <input type="submit" value="Add" class="submit">
         </form>
-        <hr>
         <div class="date-container">
 
         </div>
     </section>
 
+    <div class="modal">
+        <div class="event">
+            <div class="event-name">Tarlan's birthday</div>
+            <div class="time-indicator">
+                <span class="event-time-count">3</span>
+                <span class="event-time-name">Year</span>
+            </div>
+            <div class="time-indicator">
+                <span class="event-time-count">11</span>
+                <span class="event-time-name">Month</span>
+            </div>
+            <div class="time-indicator">
+                <span class="event-time-count">27</span>
+                <span class="event-time-name">Day</span>
+            </div>
+            <div class="time-indicator">
+                <span class="event-time-count">17</span>
+                <span class="event-time-name">Hour</span>
+            </div>
+            <div class="time-indicator">
+                <span class="event-time-count">49</span>
+                <span class="event-time-name">Minute</span>
+            </div>
+            <div class="time-indicator">
+                <span class="event-time-count">55</span>
+                <span class="event-time-name">Second</span>
+            </div>
+        </div>
+    </div>
+
 
     <script src="./assets/js/script.js"></script>
 </body>
-</html>
+</html>0
