removed negative count down added add bg image

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div class="modal">
         <div class="event">
             <div class="event-name"></div>
+            <div class="event-warning"></div>
             <div class="time-indicator">
                 <span class="event-time-count year"></span>
                 <span class="event-time-name">Year</span>
