--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section class="form-sec">
         <form>
             <input placeholder="Enter event time" type="text" class="text-input">
             <input type="datetime-local" class="date-input">
