removed event type

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <form>
             <input placeholder="Enter event time" type="text" class="text-input">
             <input type="datetime-local" class="date-input">
-            <select class="event-type" name="" id="">
+            <!-- <select class="event-type" name="" id="">
                     <option value="other">Ohter</option>
                     <option value="birthday">Birthday</option>
                     <option value="new-year">New Year</option>
                     <option value="party">Party</option>
-            </select>
+            </select> -->
             <input type="submit" value="Add" class="submit">
         </form>
         <div class="date-container">
