--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <span class="event-time-count year"></span>
                 <span class="event-time-name">Year</span>
             </div>
-            <div class="time-indicator">
+            <!-- <div class="time-indicator">
                 <span class="event-time-count month"></span>
                 <span class="event-time-name">Month</span>
-            </div>
+            </div> -->
             <div class="time-indicator">
                 <span class="event-time-count day">27</span>
                 <span class="event-time-name">Day</span>
