ready for deploy

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     </div>
 
 
-    <script src="./assets/ts/test.js"></script>
+    <script src="./assets/ts/script.js"></script>
 </body>
 </html>0
